fix article creation with tag